Add header for future catalog page
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,41 @@
 <body>
   <div class="center-container">
     <header>
-
+      <nav>
+        <ul>
+          <li>
+            <a href="#"><img src="" alt="Gllacy shop logo"></a>
+          </li>
+          <li>
+            <a href="#">Каталог</a>
+          </li>
+          <li>
+            <a href="#">Доставка и оплата</a>
+          </li>
+          <li>
+            <a href="#">О Компании</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-buttons">
+        <div class="button-search">
+          <a href="#" class="search-icon">Поиск</a>
+          <div class="popup">
+            <input type="search" name="q" id="site-search" placeholder="Что ищем?">
+          </div>
+        </div>
+        <div class="button-enter">
+          <a href="#" class="enter-icon">Вход</a>
+          <div class="popup">
+            <form action="" method="" id="sign-in">
+              <input type="email" id="user-login" name="login" placeholder="Электронная почта">
+              <input type="password" id="user-password" name="password" placeholder="Пароль">
+            </form>
+          </div>
+        </div>
+        <div class="button-cart">
+          <a href="#" class="basket">Пусто</a>
+        </div>
     </header>
     <main>
 
