Add breadcrumbs section in catalog page
- Add breadcrumbs section in catalog page

- Add active modifiers to certain blocks in header section

- Add headline

Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
             <a href="#"><img src="" alt="Gllacy shop logo"></a>
           </li>
           <li>
-            <a href="#">Каталог</a>
+            <a href="#" class="active">Каталог</a>
           </li>
           <li>
             <a href="#">Доставка и оплата</a>
@@ -45,11 +45,30 @@
           </div>
         </div>
         <div class="button-cart">
-          <a href="#" class="basket">Пусто</a>
+          <a href="#" class="basket basket__active">2 товара</a>
         </div>
     </header>
     <main>
-
+      <section class="breadcrumbs-container">
+        <div class="breadcrumbs-items">
+          <ol>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Сливочное</a></li>
+          </ol>
+        </div>
+        <div class="work-info">
+          <div class="work-time">
+            <p class="schedule">с 10 до 20, ежедневно</p>
+          </div>
+          <div class="phone">
+            <a href="tel:88124502525" class="phone-link">8 812 450-25-25</a>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2 class="catalog-headline">Сливочное мороженое</h2>
+      </section>
     </main>
     <footer>
 
