Add ice cream prices card grid section
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -126,6 +126,104 @@
           </form>
         </div>
       </section>
+      <section class="container-prices">
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">310&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">380&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">355&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">415&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">325&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочное с брусничным джемом</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">410&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочно-черничное с цельными ягодами черники</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">375&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочно-лимонное с карамельной присыпкой</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">320&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочное с шоколадной стружкой</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">440&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочно-ванильное с кусочками шоколада</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">435&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочное с ментоловым сиропом</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">355&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочное с кусочками черного шоколада</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+        <div class="price-card">
+          <div class="img-container">
+            <img src="" alt="" class="price-img">
+            <p class="price">420&#8381;/кг</p>
+          </div>
+          <p class="card-description">Сливочное с мятным сиропом</p>
+          <a href="#" class="show-button">Быстрый просмотр</a>
+        </div>
+      </section>
     </main>
     <footer>
 
