fix: Add submit button to enter popup
Fixes #1

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
               <form action="" method="" id="sign-in">
                 <input type="email" id="user-login" name="login" placeholder="Электронная почта">
                 <input type="password" id="user-password" name="password" placeholder="Пароль">
+                <button class="btn" type="submit">Войти</button>
               </form>
+              <a href="#">Забыли пароль?</a>
+              <a href="#">Новая регистрация</a>
             </div>
           </div>
           <div class="button-cart">
