--- a/index.html
+++ b/index.html
@@ -24,37 +24,54 @@
             </li>
             <li>
               <a href="#">Каталог</a>
+              <div class="popup">
+            <li>
+              <a href="#">Новинки</a>
             </li>
             <li>
-              <a href="#">Доставка и оплата</a>
+              <a href="#">Сливочное</a>
             </li>
             <li>
-              <a href="#">О Компании</a>
+              <a href="#">Щербеты</a>
             </li>
-          </ul>
-        </nav>
-        <div class="header-buttons">
-          <div class="button-search">
-            <a href="#" class="search-icon">Поиск</a>
-            <div class="popup">
-              <input type="search" name="q" id="site-search" placeholder="Что ищем?">
-            </div>
-          </div>
-          <div class="button-enter">
-            <a href="#" class="enter-icon">Вход</a>
-            <div class="popup">
-              <form action="" method="" id="sign-in">
-                <input type="email" id="user-login" name="login" placeholder="Электронная почта">
-                <input type="password" id="user-password" name="password" placeholder="Пароль">
-                <button class="btn" type="submit">Войти</button>
-              </form>
-              <a href="#">Забыли пароль?</a>
-              <a href="#">Новая регистрация</a>
-            </div>
-          </div>
-          <div class="button-cart">
-            <a href="#" class="basket">Пусто</a>
-          </div>
+            <li>
+              <a href="#">Фруктовый лед</a>
+            </li>
+            <li>
+              <a href="#">Мелорин</a>
+            </li>
+    </div>
+    </li>
+    <li>
+      <a href="#">Доставка и оплата</a>
+    </li>
+    <li>
+      <a href="#">О Компании</a>
+    </li>
+    </ul>
+    </nav>
+    <div class="header-buttons">
+      <div class="button-search">
+        <a href="#" class="search-icon">Поиск</a>
+        <div class="popup">
+          <input type="search" name="q" id="site-search" placeholder="Что ищем?">
+        </div>
+      </div>
+      <div class="button-enter">
+        <a href="#" class="enter-icon">Вход</a>
+        <div class="popup">
+          <form action="" method="" id="sign-in">
+            <input type="email" id="user-login" name="login" placeholder="Электронная почта">
+            <input type="password" id="user-password" name="password" placeholder="Пароль">
+            <button class="btn" type="submit">Войти</button>
+          </form>
+          <a href="#">Забыли пароль?</a>
+          <a href="#">Новая регистрация</a>
+        </div>
+      </div>
+      <div class="button-cart">
+        <a href="#" class="basket">Пусто</a>
+      </div>
       </header>
       <main>
         <section>
