Add prototype button cart popup with ordered good
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -66,6 +66,32 @@
     </div>
     <div class="button-cart">
       <a href="#" class="basket basket__active">2 товара</a>
+      <div class="popup">
+        <form id="cart" method="" action="">
+          <table>
+            <tr>
+              <td><a href="#">&#215;</a></td>
+              <td><input id="purchase-1" name="purchase" type="hidden" value="prod1"></td>
+              <td><img class="" src="" alt=""></td>
+              <td>Пломбир с апельсиновым джемом</td>
+              <td>1,5кг&#215;<span>200руб.</span></td>
+              <td>300 руб.</td>
+            </tr>
+            <tr>
+              <td><a href="#">&#215;</a></td>
+              <td><input id="purchase-1" name="purchase" type="hidden" value="prod1"></td>
+              <td><img class="" src="" alt=""></td>
+              <td>Пломбир с апельсиновым джемом</td>
+              <td>1,5кг&#215;<span>200руб.</span></td>
+              <td>300 руб.</td>
+            </tr>
+            <tr>
+              <td class="result-cell" colspan="6">Итого: 750 руб.</td>
+            </tr>
+          </table>
+          <button class="btn" type="submit">Оформить заказ</button>
+        </form>
+      </div>
     </div>
     </header>
     <main>
