fix: Add nav class for navigation in catalog page
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 <body>
   <div class="center-container">
     <header>
-      <nav>
+      <nav class="nav">
         <ul>
           <li>
             <a href="#"><img src="" alt="Gllacy shop logo"></a>
