--- a/catalog.html
+++ b/catalog.html
@@ -19,80 +19,80 @@
           </li>
           <li>
             <a href="#">Каталог</a>
-            <div class="popup">
-          <li>
-            <a href="#">Новинки</a>
+            <ul class="popup">
+              <li>
+                <a href="#">Новинки</a>
+              </li>
+              <li>
+                <a href="#">Сливочное</a>
+              </li>
+              <li>
+                <a href="#">Щербеты</a>
+              </li>
+              <li>
+                <a href="#">Фруктовый лед</a>
+              </li>
+              <li>
+                <a href="#">Мелорин</a>
+              </li>
+            </ul>
           </li>
           <li>
-            <a href="#">Сливочное</a>
+            <a href="#">Доставка и оплата</a>
           </li>
           <li>
-            <a href="#">Щербеты</a>
+            <a href="#">О Компании</a>
           </li>
-          <li>
-            <a href="#">Фруктовый лед</a>
-          </li>
-          <li>
-            <a href="#">Мелорин</a>
-          </li>
-  </div>
-  </li>
-  <li>
-    <a href="#">Доставка и оплата</a>
-  </li>
-  <li>
-    <a href="#">О Компании</a>
-  </li>
-  </ul>
-  </nav>
-  <div class="header-buttons">
-    <div class="button-search">
-      <a href="#" class="search-icon">Поиск</a>
-      <div class="popup">
-        <input type="search" name="q" id="site-search" placeholder="Что ищем?">
-      </div>
-    </div>
-    <div class="button-enter">
-      <a href="#" class="enter-icon">Вход</a>
-      <div class="popup">
-        <form action="" method="" id="sign-in">
-          <input type="email" id="user-login" name="login" placeholder="Электронная почта">
-          <input type="password" id="user-password" name="password" placeholder="Пароль">
-          <button class="btn" type="submit">Войти</button>
-        </form>
-        <a href="#">Забыли пароль?</a>
-        <a href="#">Новая регистрация</a>
-      </div>
-    </div>
-    <div class="button-cart">
-      <a href="#" class="basket basket__active">2 товара</a>
-      <div class="popup">
-        <form id="cart" method="" action="">
-          <table>
-            <tr>
-              <td><a href="#">&#215;</a></td>
-              <td><input id="purchase-1" name="purchase" type="hidden" value="prod1"></td>
-              <td><img class="" src="" alt=""></td>
-              <td>Пломбир с апельсиновым джемом</td>
-              <td>1,5кг&#215;<span>200руб.</span></td>
-              <td>300 руб.</td>
-            </tr>
-            <tr>
-              <td><a href="#">&#215;</a></td>
-              <td><input id="purchase-1" name="purchase" type="hidden" value="prod1"></td>
-              <td><img class="" src="" alt=""></td>
-              <td>Пломбир с апельсиновым джемом</td>
-              <td>1,5кг&#215;<span>200руб.</span></td>
-              <td>300 руб.</td>
-            </tr>
-            <tr>
-              <td class="result-cell" colspan="6">Итого: 750 руб.</td>
-            </tr>
-          </table>
-          <button class="btn" type="submit">Оформить заказ</button>
-        </form>
-      </div>
-    </div>
+        </ul>
+      </nav>
+      <div class="header-buttons">
+        <div class="button-search">
+          <a href="#" class="search-icon">Поиск</a>
+          <div class="popup">
+            <input type="search" name="q" id="site-search" placeholder="Что ищем?">
+          </div>
+        </div>
+        <div class="button-enter">
+          <a href="#" class="enter-icon">Вход</a>
+          <div class="popup">
+            <form action="" method="" id="sign-in">
+              <input type="email" id="user-login" name="login" placeholder="Электронная почта">
+              <input type="password" id="user-password" name="password" placeholder="Пароль">
+              <button class="btn" type="submit">Войти</button>
+            </form>
+            <a href="#">Забыли пароль?</a>
+            <a href="#">Новая регистрация</a>
+          </div>
+        </div>
+        <div class="button-cart">
+          <a href="#" class="basket basket__active">2 товара</a>
+          <div class="popup">
+            <form id="cart" method="" action="">
+              <table>
+                <tr>
+                  <td><a href="#">&#215;</a></td>
+                  <td><input id="purchase-1" name="purchase" type="hidden" value="prod1"></td>
+                  <td><img class="" src="" alt=""></td>
+                  <td>Пломбир с апельсиновым джемом</td>
+                  <td>1,5кг&#215;<span>200руб.</span></td>
+                  <td>300 руб.</td>
+                </tr>
+                <tr>
+                  <td><a href="#">&#215;</a></td>
+                  <td><input id="purchase-1" name="purchase" type="hidden" value="prod1"></td>
+                  <td><img class="" src="" alt=""></td>
+                  <td>Пломбир с апельсиновым джемом</td>
+                  <td>1,5кг&#215;<span>200руб.</span></td>
+                  <td>300 руб.</td>
+                </tr>
+                <tr>
+                  <td class="result-cell" colspan="6">Итого: 750 руб.</td>
+                </tr>
+              </table>
+              <button class="btn" type="submit">Оформить заказ</button>
+            </form>
+          </div>
+        </div>
     </header>
     <main>
       <section class="breadcrumbs-container">
