--- a/catalog.html
+++ b/catalog.html
@@ -96,13 +96,11 @@
     </header>
     <main>
       <section class="breadcrumbs-container">
-        <div class="breadcrumbs-items">
-          <ol>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Сливочное</a></li>
-          </ol>
-        </div>
+        <ul class="breadcrumbs-items">
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Сливочное</a></li>
+        </ul>
         <div class="work-info">
           <div class="work-time">
             <p class="schedule">с 10 до 20, ежедневно</p>
