fix: Move radio input from labels for future
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -135,18 +135,14 @@
             </div>
             <div class="filter-item">
               <h4 class="filter-headline">Жирность</h4>
-              <label class="radio-option" for="fat-content-1">
-                <input id="fat-content-1" type="radio" name="fat-content" value="0">0%
-              </label>
-              <label class="radio-option" for="fat-content-2">
-                <input id="fat-content-2" type="radio" name="fat-content" value="10">до 10%
-              </label>
-              <label class="radio-option" for="fat-content-3">
-                <input id="fat-content-3" type="radio" name="fat-content" value="30">до 30%
-              </label>
-              <label class="radio-option" for="fat-content-4">
-                <input id="fat-content-4" type="radio" name="fat-content" value="greater">свыше 30%
-              </label>
+              <input id="fat-content-1" type="radio" name="fat-content" value="0">
+              <label class="radio-option" for="fat-content-1">0%</label>
+              <input id="fat-content-2" type="radio" name="fat-content" value="10">
+              <label class="radio-option" for="fat-content-2">до 10%</label>
+              <input id="fat-content-3" type="radio" name="fat-content" value="30">
+              <label class="radio-option" for="fat-content-3">до 30%</label>
+              <input id="fat-content-4" type="radio" name="fat-content" value="greater">
+              <label class="radio-option" for="fat-content-4">свыше 30%</label>
             </div>
             <div class="filter-item">
               <h4 class="filter-headline">Наполнители:</h4>
