fix: Replace section tag to ul for semantics
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -264,15 +264,15 @@
           <a href="#" class="show-button">Быстрый просмотр</a>
         </div>
       </section>
-      <section class="pagination">
-        <a class="disabled" href="#">&lt;</a>
-        <a class="active" href="#">1</a>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#">5</a>
-        <a href="#">&gt;</a>
-      </section>
+      <ul class="pagination">
+        <li><a class="disabled" href="#">&lt;</a></li>
+        <li><a class="active" href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">&gt;</a></li>
+      </ul>
     </main>
     <footer>
       <div class="social">
