fix: Remove redundant wrapper for footer nav
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -281,22 +281,20 @@
         <a href="#" class="facebook">Фейсбук</a>
         <a href="#" class="vkontakt">Вконтакте</a>
       </div>
-      <div class="footer-nav">
-        <ul>
-          <li>
-            <a href="#" class="active">Для поставщиков</a>
-          </li>
-          <li>
-            <a href="#" class="active">О производстве</a>
-          </li>
-          <li>
-            <a href="#" class="active">Наши документы</a>
-          </li>
-          <li>
-            <a href="#" class="active">Экологические стандарты</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="footer-nav">
+        <li>
+          <a href="#" class="active">Для поставщиков</a>
+        </li>
+        <li>
+          <a href="#" class="active">О производстве</a>
+        </li>
+        <li>
+          <a href="#" class="active">Наши документы</a>
+        </li>
+        <li>
+          <a href="#" class="active">Экологические стандарты</a>
+        </li>
+      </ul>
       <div class="copyright">
         <img src="" alt="html academy" class="html-logo">
         <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
