--- a/catalog.html
+++ b/catalog.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Gllacy Shop | Глейси - магазин мороженого<</title> <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-      <script src="js/main.js"></script>
+  <title>Gllacy Shop | Глейси - магазин мороженого</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+  <script src="js/main.js"></script>
 </head>
 
 <body>
