fix: Bring the buttons to general appearance
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -47,25 +47,25 @@
         </ul>
       </nav>
       <div class="header-buttons">
-        <div class="button-search">
+        <div class="btn btn_small btn_search">
           <a href="#" class="search-icon">Поиск</a>
           <div class="popup">
             <input type="search" name="q" id="site-search" placeholder="Что ищем?">
           </div>
         </div>
-        <div class="button-enter">
+        <div class="btn btn_small btn_enter">
           <a href="#" class="enter-icon">Вход</a>
           <div class="popup">
             <form action="" method="" id="sign-in">
               <input type="email" id="user-login" name="login" placeholder="Электронная почта">
               <input type="password" id="user-password" name="password" placeholder="Пароль">
-              <button class="btn" type="submit">Войти</button>
+              <button class="btn btn_small" type="submit">Войти</button>
             </form>
             <a href="#">Забыли пароль?</a>
             <a href="#">Новая регистрация</a>
           </div>
         </div>
-        <div class="button-cart">
+        <div class="btn btn_small btn_cart">
           <a href="#" class="basket basket__active">2 товара</a>
           <div class="popup">
             <form id="cart" method="" action="">
@@ -90,7 +90,7 @@
                   <td class="result-cell" colspan="6">Итого: 750 руб.</td>
                 </tr>
               </table>
-              <button class="btn" type="submit">Оформить заказ</button>
+              <button class="btn btn_small" type="submit">Оформить заказ</button>
             </form>
           </div>
         </div>
@@ -163,7 +163,7 @@
                 <input id="filler-5" type="checkbox" name="jams">сиропы
               </label>
             </div>
-            <input class="btn btn__submit" type="submit" value="Применить">
+            <input class="btn btn_small btn_submit" type="submit" value="Применить">
           </form>
         </div>
       </section>
