--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <nav class="nav">
           <ul>
             <li>
-              <a href="#"><img src="" alt="Gllacy shop logo"></a>
+              <a href="#">
+                <img src="img/logo.png" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
+              </a>
             </li>
             <li>
               <a href="#">Каталог</a>
@@ -52,13 +54,17 @@
         </nav>
         <div class="header-buttons">
           <div class="btn btn_small btn_search">
-            <a href="#" class="search-icon">Поиск</a>
+            <a href="#" class="search-icon">
+              <img src="img/magnifier-icon.png" alt="Иконка поиска по сайту" width="17" height="17">
+            </a>
             <form class="popup" action="" method="" id="search">
               <input type="search" name="q" id="site-search" placeholder="Что ищем?">
             </form>
           </div>
           <div class="btn btn_small btn_enter">
-            <a href="#" class="enter-icon">Вход</a>
+            <a href="#" class="enter-icon">
+              <img src="img/enter-icon.png" alt="Иконка входа" width="21" height="19">Вход
+            </a>
             <div class="popup">
               <form action="" method="" id="sign-in">
                 <input type="email" id="user-login" name="login" placeholder="Электронная почта">
@@ -70,7 +76,9 @@
             </div>
           </div>
           <div class="btn btn_small btn_cart">
-            <a href="#" class="basket">Пусто</a>
+            <a href="#" class="basket">
+              <img src="img/cart-empty-icon.png" alt="Иконка корзины" width="21" height="20">Пусто
+            </a>
           </div>
         </div>
       </header>
@@ -118,7 +126,7 @@
         <section class="container-prices">
           <div class="price-card">
             <div class="img-container">
-              <img src="" alt="" class="price-img">
+              <img src="img/creamy-orange-circle.png" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img" width="267" height="267">
               <p class="price">310&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
@@ -126,7 +134,7 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="" alt="" class="price-img">
+              <img src="img/creamy-coffee-circle.png" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267" height="267">
               <p class="price">380&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
@@ -134,7 +142,7 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="" alt="" class="price-img">
+              <img src="img/creamy-strawberry-circle.png" alt="Фото сливочно-клубничного мороженого" class="price-img" width="267" height="267">
               <p class="price">355&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
@@ -142,7 +150,7 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="" alt="" class="price-img">
+              <img src="img/creme-brulee-circle.png" alt="Фото сливочного мороженого крем-брюле" class="price-img" width="267" height="267">
               <p class="price">415&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
@@ -154,13 +162,17 @@
             <h3>Maгазин Глэйси &mdash; это онлайн- и офлайн-магазин по продаже мороженного собственного производства на
               развес</h3>
             <div class="description-container">
+              <img src="img/ice-cream-icon.png" alt="Иконка мороженого на палочке" width="49" height="49">
               <p class="description-item">Все наше мороженое изготавливается на собственном производстве, с
                 использованием современного оборудования и проверенных временем технологий.</p>
+              <img src="img/leaf-icon.png" alt="Иконка листа растения" width="49" height="49">
               <p class="description-item">Для приготовления мороженого используются настоящие сливки и молоко
                 высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,
                 экологически чистого сырья.</p>
+              <img src="img/cow-icon.png" alt="Иконка головы коровы" width="49" height="49">
               <p class="description-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и
                 компаний, с которыми нас связывает долговременное сотрудничество.</p>
+              <img src="img/thermometer-icon.png" alt="Иконка градусника" width="49" height="49">
               <p class="description-item">Доставка нашего мороженого до заказчиков осуществляется в специальном
                 термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
             </div>
@@ -188,15 +200,15 @@
     <footer>
       <div class="container">
         <div class="social">
-          <a href="#" class="twitter">Твиттер</a>
-          <a href="#" class="instagram">Инстаграм</a>
-          <a href="#" class="facebook">Фейсбук</a>
-          <a href="#" class="vkontakt">Вконтакте</a>
+          <a href="#" class="twitter"><img src="img/twitter-icon.png" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
+          <a href="#" class="instagram"><img src="img/instagram-icon.png" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
+          <a href="#" class="facebook"><img src="img/facebook-icon.png" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
+          <a href="#" class="vkontakt"><img src="img/vkontakt-icon.png" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
         </div>
         <div class="footer-nav">
           <ul>
             <li>
-              <a href="#" class="active">Для поставщиков</a>
+              <a href="#" class="active"><img src="img/heart-icon.png" alt="Иконка сердца"  width="15" height="13">Для поставщиков</a>
             </li>
             <li>
               <a href="#" class="active">О производстве</a>
@@ -211,7 +223,7 @@
         </div>
         <div class="copyright">
           <a href="https://htmlacademy.ru/">
-            <img class="html-logo" src="" alt="Html academy logo">
+            <img class="html-logo" src="img/logo-htmlacademy-small.png" alt="Логотип Html академии"  width="108" height="39">
           </a>
           <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
         </div>
